# gtk-template

./: .clang-format  CMakeLists.txt
src/: helloworld.cpp  helloworld.h  main.cpp
